--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,52 @@
-*{
+
+  * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-body{
+    font-family: "Caveat", cursive;
+    font-family: "Josefin Sans", sans-serif;
+  }
+  .float-carrito{
+    margin: 15px 0px 10px 15px;
+    position:fixed;
+    width: 65px;
+    height: 65px;
+    bottom: 15px;
+    top: 80px;
+    z-index:100;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  body {
     background-color: #032533;
-}
-nav {
+  }
+  
+  p {
+    color: #dddddd;
+  }
+  
+  h1 {
+    color: #647e83;
+    font-weight: bold;
+  }
+  
+  h2 {
+    color: #647e83;
+    font-weight: bold;
+  }
+  
+  h3 {
+    font-size: 20px;
+    font-weight: bold;
+    color: #647e83;
+  }
+  
+  h4 {
+    color: #dddddd;
+    font-size: 15px;
+  }
+  
+  nav {
     background-color: rgba(0, 0, 0, 0.9);
   }
   
@@ -20,21 +61,53 @@ nav {
   a {
     text-decoration: none;
   }
-
+  
+  .flex, .footer, .card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  
   .logo {
     margin: 5%;
     width: 35px;
   }
-
-
-.hovercard {
+  
+  .banner {
+    opacity: 0.8;
+  }
+  
+  .carousel-item img {
+    object-fit: cover;
+    width: 100%;
+    height: 100vh;
+  }
+  
+  .main__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: auto;
+    flex-direction: column;
+  }
+  
+  .video {
+    max-width: 560px;
+    max-height: 315px;
+    width: 100%;
+    height: 315px;
+  }
+  
+  .hovercard {
     border-radius: 8px;
     box-shadow: 4px 2px 10px 0px black;
   }
   
   .hovercard:hover {
     transform: scale(1.01);
-    transition: 0.1s;
+    transition: 0.4s;
     box-shadow: 12px 6px 25px 2px black;
     opacity: 1;
   }
@@ -51,7 +124,6 @@ nav {
     opacity: 0.8;
   }
   .card .card-body:hover {
-   
     opacity: 1;
   }
   .card .card-body .card-text {
@@ -65,9 +137,56 @@ nav {
     border: none;
   }
   .card .card-body .btn:hover {
-    opacity: 0.8;
+    transform: scale(1.05);
+    box-shadow: 0px 1px 2px 3px #050c0c;
+    color: #dddddd;
+    opacity: 1;
   }
   .card .card-body .card-title {
     color: #dddddd;
     font-weight: 700;
   }
+  
+  .parrafo {
+    color: #dddddd;
+    font-style: italic;
+  }
+  
+  .parrafo-index {
+    max-width: 1000px;
+    color: #dddddd;
+    font-style: normal;
+    font-size: 18px;
+  }
+  
+  .img-service {
+    width: 100%;
+    box-shadow: 5px 3px 30px 4px black;
+    border-radius: 6px;
+    opacity: 0.9;
+  }
+  
+  .contacto {
+    list-style: none;
+    color: #E9D8A6;
+    padding: 0%;
+  }
+  .contacto-img {
+    width: 100%;
+    max-width: 500px;
+    align-items: center;
+    opacity: 0.9;
+  }
+  
+  .footer {
+    flex-direction: row;
+    margin: 0px 10px;
+    width: 100%;
+  }
+  .footer .logo-footer {
+    width: 40px;
+    margin: 2px 10px;
+    font-size: 18px;
+  }
+  
+  
